--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ django-silk = "*"
 django-filter = "*"
 python-decouple = "*"
 drf-yasg = "*"
+gunicorn = "*"
+whitenoise = "*"
+dj-database-url = "*"
 
 [dev-packages]
 
